cabal-version:       2.4
name:                arch-xmonad
version:             0.1.0.0
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              francois

executable xmonad-x86_64-linux
  main-is:             xmonad.hs
  
  build-depends:       base >= 4.13.0.0,
                       containers >= 0.6.2.1,
                       xmonad >= 0.15,
                       xmonad-contrib >= 0.16
                       
  default-language:    Haskell2010
    